[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ppan"
version = "0.1"
description = "Piano performance video analysis."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "Cython",
    "numpy",
    "mido",
    "tqdm",
    "partitura",
    "transformers[torch]",
    "matplotlib",
    "torchvision",
    "mir_eval",
    "python-dotenv",
    "torch",
    "pillow",
    "nvidia-dali-cuda120",
    "wandb"
]

[tool.setuptools.packages.find]
include = ["ppan"]

